# Odyseusz

client/: package-lock.json  package.json  vite.config.ts
client/src/: index.css
client/src/app/: App.tsx
client/src/assets/: index.ts
client/src/components/Button/: Button.tsx  Button.types.ts
client/src/components/DayPicker/: DayPicker.tsx  DayPicker.types.ts  index.ts
client/src/components/FormButtons/: FormButtons.tsx  FormButtons.types.tsx  index.ts
client/src/components/Header/: Header.tsx
client/src/components/IconButton/: IconButton.tsx  IconButton.types.ts
client/src/components/Input/: Input.tsx  Input.types.ts
client/src/components/MapPicker/: MapPicker.tsx  index.ts
client/src/components/Markdown/: Markdown.tsx  Markdown.types.ts
client/src/components/SectionHeader/: SectionHeader.tsx  SectionHeader.types.ts  index.ts
client/src/components/Select/: Select.tsx  Select.types.ts  index.ts
client/src/components/TextareaInput/: TextareaInput.tsx  TextareaInput.types.ts  index.ts
client/src/components/Title/: Title.tsx  Title.types.ts  index.ts
client/src/components/TitleSection/: TitleSection.tsx  index.ts
client/src/pages/evacuation-create/: EvacuationCreatePage.tsx  EvacuationCreatePage.types.tsx  EvacuationCreatePage1.tsx  index.ts
client/src/pages/evacuations-read/: EvacuationsReadPage.tsx  EvacuationsReadPage.types.ts  index.ts  (+1 more)
client/src/types/: all_types.ts  rotes.ts
server/: .envexample  .gitignore  ERD.md  README.md  add_sample_countries.py  pyproject.toml
server/src/app/: main.py
server/src/app/core/: config.py  db.py  dependencies.py  security.py
server/src/app/crud/: country.py  evacuation.py  location.py  notification.py  refresh_token.py  travel.py  user.py
server/src/app/models/: __init__.py  country.py  evacuation.py  location.py  notification.py  refresh_token.py  travel.py  user.py
server/src/app/routes/: auth_router.py  country_router.py  evacuation_router.py  health_router.py  router.py  travel_router.py  user_router.py
server/src/app/schemas/: country.py  evacuation.py  health.py  location.py  notification.py  travel.py  user.py
server/src/app/services/: country_updater.py  external_api_client.py  scheduler.py  tugo_client.py
(+209 files in other folders)
