[project]
name = "app"
version = "0.1.0"
description = "Odyseusz backend"
readme = "README.md"
authors = [
    { name = "Jakub Westa", email = "jakub.westa@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.1",
    "fastapi>=0.121.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
packages = []

[project.scripts]
server = "app.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
