[project]
name = "app"
version = "0.1.0"
description = "Odyseusz backend"
readme = "README.md"
authors = [
    { name = "Jakub Westa", email = "jakub.westa@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "apscheduler>=3.10.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.121.0",
    "httpx>=0.27.0",
    "bcrypt==4.0.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.6.1",
    "pydeps>=3.0.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
packages = []

[project.scripts]
server = "app.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
